--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html5>
 <html>
+
   <head>
-    <title>Index</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="my first html page">
+  <meta name="keywords" content="HTML,CSS">
+  <title>Index</title>
   </head>
+
   <body>
   <h1> markdown-warm-up</h1>
 
