--- a/index.html
+++ b/index.html
@@ -1,42 +1,29 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="my first html page">
     <meta name="keywords" content="HTML,CSS">
-  <title>Index</title>
+    <title>Index</title>
   </head>
-
   <body>
-  <h1> markdown-warm-up</h1>
-
-  <h2>Welke website heeft u gevonden?  </h2>
-
-  <a href="http://www.angelfire.com/super/badwebs/">the worst website ever - Angelfire</a>
-
-  <h3>Wordt het regelmatig bijgewerkt?</h3>
-  <p>ja, inhoudelijk wordt deze bijgewerkt, qwa opmaak is deze duidelijk niet meer up-to-date.</p>
-
-  <h3>Hoe heb je het gevonden ?  </h3>
-
-  GOOGLE
-  <h2> Waarom heeft deze website updates of een remake nodig? </h2>
-    <p>
-      <ul>
-        <li>oldschool website</li>
-        <li> niet responsive voor verschillende soorten schermen</li>
-        <li>teveel kleur</li>
-        <li>teveel bewegende beelden</li>
-      </ul>
-    </p>
-
-  <h2>Is deze website aanwezig op sociale netwerken?  </h2>
-
-    <p> Neen, deze kan je wel delen op sociale sites, maar heeft er zelf geen.</p>
-
-  <h3>toekomstige aanbevelingen:</h3>
-
-    <p>
+    <h1>markdown-warm-up</h1>
+    <h2>Welke website heeft u gevonden?</h2>
+    <a href="http://www.angelfire.com/super/badwebs/">the worst website ever - Angelfire</a>
+    <h3>Wordt het regelmatig bijgewerkt?</h3>
+    <p>ja, inhoudelijk wordt deze bijgewerkt, qwa opmaak is deze duidelijk niet meer up-to-date.</p>
+    <h3>Hoe heb je het gevonden ?  </h3>
+      <p>GOOGLE</p>
+    <h2> Waarom heeft deze website updates of een remake nodig? </h2>
+        <ul>
+          <li>oldschool website</li>
+          <li>niet responsive voor verschillende soorten schermen</li>
+          <li>teveel kleur</li>
+          <li>teveel bewegende beelden</li>
+        </ul>
+    <h2>Is deze website aanwezig op sociale netwerken?  </h2>
+      <p> Neen, deze kan je wel delen op sociale sites, maar heeft er zelf geen.</p>
+    <h3>toekomstige aanbevelingen:</h3>
       <ul>
         <li>minder kleur</li>
         <li>minder bewegende items</li>
@@ -47,15 +34,10 @@
         <li>meer duidelijkheid</li>
         <li>rustiger schermpopbouw</li>
       </ul>
-    </p>
-
-  <p>
-    <ol>
-      <li>Carolinne Vandersteen</li>
-      <li>Ingrid Bergs</li>
-      <li>An Cattie</li>
-   </ol>
-  </p>
-
+      <ol>
+        <li>Carolinne Vandersteen</li>
+        <li>Ingrid Bergs</li>
+        <li>An Cattie</li>
+     </ol>
   </body>
 </html>
