--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="my first html page">
     <meta name="keywords" content="HTML,CSS">
+    <link rel=stylesheet type="text/css" href="mystyles.css">
     <title>Index</title>
   </head>
   <body>
